--- a/khyeras/styles/khyeras_v1/template/partials/footer_links.html
+++ b/khyeras/styles/khyeras_v1/template/partials/footer_links.html
@@ -1,74 +1,28 @@
 {% set footer_links = {
 	'Listed At' : [
 		{
-			name : 'Listing #02',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
+			name : 'RPG Initiative',
+			url :  '//rpginitiative.com',
+			image : './images/content/misc/banner-rpginitiative.png'
 		},
 		{
-			name : 'Listing #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
+			name : 'RPG-Directory',
+			url :  '//rpg-directory.com/index.php',
+			image : '//files.jcink.net/uploads/rpgdirectory/RPGD_Buttons/rpgdbutton2.png'
 		},
 		{
-			name : 'RPG Rating',
+			name : 'RPG Rating System',
 			url :  '//rpgrating.com',
-			image : '//rpgrating.com/ratings/333.png'
+			image : './images/content/misc/banner-rpgrating-333.png'
 		}
 	],
-	'Affiliates' : [
-		{
-			name : 'Affiliate #01',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #02',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		},
-		{
-			name : 'Affiliate #03',
-			url :  '//www.google.com',
-			image : '//via.placeholder.com/88x31'
-		}
-	]
+	'Affiliates' : []
 } %}
 
 {% if footer_links %}
 	{% for key, link in footer_links %}
+		<h4>{{ key }}</h4>
 		{% if (link | length) > 0 %}
-			<h4>{{ key }}</h4>
 			<div class="button-wrapper">
 				{% for detail in link %}
 					<a class="button-link" href="{{ detail.url }}" target="_blank">
@@ -76,6 +30,8 @@
 					</a>
 				{% endfor %}
 			</div>
+		{% else %}
+			<p><em>Coming soon...!</em></p>
 		{% endif %}
 	{% endfor %}
 {% endif %}
