--- a/khyeras/styles/khyeras_v1/template/partials/header_callouts.html
+++ b/khyeras/styles/khyeras_v1/template/partials/header_callouts.html
@@ -1,30 +1,14 @@
 {% set header_links = {
 	'Announcements' : [
 		{
-			name : 'Freed from Bhelests nightmares and undead legions, the realm of Khy\'eras',
-			url : '//www.google.com'
+			name : 'Officially Open!',
+			date : 'May 19, 2019',
+			url : './viewtopic.php?f=9&t=47&p=90#p90'
 		},
 		{
-			name : 'Announcement #02',
-			url : '//www.google.com'
-		},
-		{
-			name : 'Announcement #03',
-			url : '//www.google.com'
-		}
-	],
-	'Events' : [
-		{
-			name : 'Event #01',
-			url : '//www.google.com'
-		},
-		{
-			name : 'Event #02',
-			url : '//www.google.com'
-		},
-		{
-			name : 'Event #03',
-			url : '//www.google.com'
+			name : 'Roadmap',
+			date : 'May 18, 2019',
+			url : './viewtopic.php?f=9&t=46'
 		}
 	]
 } %}
@@ -42,7 +26,7 @@
 								<li>
 									<a href="{{ detail.url }}">
 										{{ ((detail.name | length) > textlimit) ? (detail.name[:textlimit] ~ '...') : detail.name }}
-									</a>
+									</a> posted {{ detail.date }}
 								</li>
 							{% endfor %}
 						</ul>
