Fix board url structure

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -10,7 +10,7 @@
 					<div class="flex-row flex-row-20">
 						<div class="flex-column">
 							<h4>About</h4>
-							<p>Free from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveils vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. Khy'eras is an original high fantasy / medieval RPG with no word count and a focus on collaborative writing experiences. <a class="read-more" href="{BOARD_URL}about">Read more...</a></p>
+							<p>Free from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveils vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. Khy'eras is an original high fantasy / medieval RPG with no word count and a focus on collaborative writing experiences. <a class="read-more" href="{{ ROOT_PATH }}about">Read more...</a></p>
 							<p class="footer-text">
 								&copy; 2019 Khy'eras RPG<br />
 								Content and layout design by Adria/Memoria<br />
@@ -24,7 +24,7 @@
 									<span class="footer-link-text">{{ lang('TERMS_LINK') }}</span>
 								</a>
 								<span class="bullet">&bull;</span>
-								<a href="./sitemap">Sitemap</a>
+								<a href="{{ ROOT_PATH }}sitemap">Sitemap</a>
 								<!-- IF TRANSLATION_INFO --><br />{{ TRANSLATION_INFO }}<!-- ENDIF -->
 								<!-- EVENT overall_footer_copyright_append -->
 								<!-- IF DEBUG_OUTPUT --><br />{{ DEBUG_OUTPUT }}<!-- ENDIF -->
