--- a/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_writer_details.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_writer_details.html
@@ -1,6 +1,6 @@
 {% if S_PROFILE_C_WRITER_NAME %}
 	{% set writer_value %}
-		For more information, see <a href="{{ BOARD_URL }}{{ PROFILE_C_WRITER_NAME_CONTACT }}">{{ PROFILE_C_WRITER_NAME_VALUE }}</a>.
+		For more information, see <a href="{{ ROOT_PATH }}{{ PROFILE_C_WRITER_NAME_CONTACT }}">{{ PROFILE_C_WRITER_NAME_VALUE }}</a>.
 	{% endset %}
 {% endif %}
 
