--- a/khyeras/styles/khyeras_v1/template/partials/footer_links.html
+++ b/khyeras/styles/khyeras_v1/template/partials/footer_links.html
@@ -3,7 +3,7 @@
 		{
 			name : 'RPG Initiative',
 			url :  '//rpginitiative.com',
-			image : './images/content/misc/banner-rpginitiative.png'
+			image : ROOT_PATH ~ 'images/content/misc/banner-rpginitiative.png'
 		},
 		{
 			name : 'RPG-Directory',
@@ -13,7 +13,7 @@
 		{
 			name : 'RPG Rating System',
 			url :  '//rpgrating.com',
-			image : './images/content/misc/banner-rpgrating-333.png'
+			image : ROOT_PATH ~ 'images/content/misc/banner-rpgrating-333.png'
 		}
 	],
 	'Affiliates' : []
