--- a/khyeras/styles/khyeras_v1/template/partials/content_half_breed.html
+++ b/khyeras/styles/khyeras_v1/template/partials/content_half_breed.html
@@ -3,7 +3,7 @@
 		{
 			title : 'Not Applicable',
 			icon : 'icon-bg-red fa-close card-trigger',
-			description : '<em>Cannot create a Half-Breed with this race!</em> Dragons limit reproduction to their own kind. They have experimented allowing humans to use their blood to create the Ue\'drahc, but this genesis is not utilized presently.'
+			description : '<em>Cannot create a half-breed with this race!</em> Dragons limit reproduction to their own kind. They have experimented allowing Humans to use their blood to create the Ue\'drahc, but this genesis is not utilized presently.'
 		}
 	],
 	'Dwarf' : [
@@ -40,7 +40,7 @@
 		{
 			title : 'Ue\'drahc',
 			icon : 'icon-bg-red fa-close card-trigger',
-			description : 'No. Reptilian humans are imposing, tall, and scaly.'
+			description : 'No. Reptilian Humans are imposing, tall, and scaly.'
 		}
 	],
 	'Elemental' : [
@@ -121,7 +121,7 @@
 		{
 			title : 'Not Applicable',
 			icon : 'icon-bg-red fa-close card-trigger',
-			description : '<em>Cannot create a Half-Breed with this race!</em> A being is either dead or not-dead; there is no in-between. Ghosts derive from the passing of select races: Lumeacia, Kerasoka, Shapeshifter, Dwarf, or Human.'
+			description : '<em>Cannot create a half-breed with this race!</em> A being is either dead or not-dead; there is no in-between. Ghosts derive from the passing of select races: Lumeacia, Kerasoka, Shapeshifter, Dwarf, or Human.'
 		}
 	],
 	'Human' : [
@@ -158,7 +158,7 @@
 		{
 			title : 'Ue\'drahc',
 			icon : 'icon-bg-green fa-heart',
-			description : 'Yes. Offspring are more dragon-like, therefore keeping the Ue\'drahc community strong.'
+			description : 'Yes. Offspring are more Dragon-like, therefore keeping the Ue\'drahc community strong.'
 		}
 	],
 	'Kerasoka' : [
@@ -202,7 +202,7 @@
 		{
 			title : 'Not Applicable',
 			icon : 'icon-bg-red fa-close card-trigger',
-			description : '<em>Cannot create a Half-Breed with this race!</em> Folk who are bitten and turned by the Korcai virus are completely altered. Once transformed, the infected lose any capabilities and appearances of their former race.'
+			description : '<em>Cannot create a half-breed with this race!</em> Folk who are bitten and turned by the Korcai virus are completely altered. Once transformed, the infected lose any capabilities and appearances of their former race.'
 		}
 	],
 	'Lumeacia' : [
