--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_welcome.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_welcome.html
@@ -15,7 +15,7 @@
 						{% endif %}
 						{% if KHY_USER_GROUP_NAME == 'Characters' %}
 							<p class="level">
-								{% set zero = KHY_MEMBER_LEVEL < 10 ? '0' : ''  %}						
+								{% set zero = KHY_MEMBER_LEVEL < 10 ? '0' : ''  %}
 								Level {{ zero }}{{ KHY_USER_LEVEL }}
 							</p>
 							<p class="race-and-class">
@@ -66,7 +66,7 @@
 							Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{{ ROOT_PATH }}lore-history">Read more...</a>
 						</p>
 						<p>
-							The current year is <span class="year">448</span> and the season is fall. <a href="{{ ROOT_PATH }}lore-timeline" class="read-more">Check here for Khy'eras' timeline.</a>
+							The current year is <span class="year">288 AoN</span> and the season is fall. <a href="{{ ROOT_PATH }}lore-timeline" class="read-more">Check here for Khy'eras' timeline.</a>
 						</p>
 					</div>
 				</div>
