Update faq, add favicons, fix image js

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
@@ -19,6 +19,17 @@ dl.faq {
 	}
 }
 
+#faqlinks, #khyeras-faq {
+	.faq dd {
+		position: relative;
+		padding-left: 15px;
+		&:before {
+			content: '\002022';
+			@include position($type: absolute, $left: 0, $top: 0);
+		}
+	}
+}
+
 /* Search Page
 ============================================== */
 
