Update faq and fix playing as quicklink

--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_faq.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_faq.html
@@ -9,7 +9,15 @@
 		{
 			q : 'For storyline purpose, can I create a village, building, guild, or something else?',
 			a : 'This is the "sandbox" part of Khy\'eras where we would love to see players thinking of places to go with backstories. The creation will not be an official place (not yet anyway), but run with the idea and have other people contribute when possible. There are lots of unnamed lands and city buildings waiting to be discovered. Having players unearth this content is helpful and engaging to the game.<br /><br />However, places should be reasonable. Don\'t come up with an idea for a major city that has a population of one million and a king and queen. That\'s putting a rather surprising and busy place on the map that hasn\'t been mentioned anywhere in the realm\'s history. How would it have gotten there? More common and acceptable examples might be Thieves/Rogues Guilds, taverns, quaint and remote villages, or camps.<br /><br />In the future, Khy\'eras may open a content submission area, where a writer can submit lore to be officially added to the game.'
-		}
+		},
+		{
+			q : 'This game feels like it is based on Dungeons and Dragons. Should I expect the same thing?',
+			a : 'Khy\'eras based its <a href="./lore-classes">class list</a> from <a href="//paizo.com/pathfinder" target="_blank">Pathfinder</a> (3rd Edition D&D), but that is the extent of our ties to D&D. The rest of the Khy\'eras\' lore, gameplay, and settings are entirely unique. We are, of course, influenced by much in the fantasy genre, but attempt to immerse our writers in a world that is mostly individual.<br /><br />While we do have concepts such as stats, currency, and experience, these mechanics are still being worked into the various facets of Khy\'eras. It is our desire that though these things are present, they are not required to play and a person may enjoy Khy\'eras simply by writing.'
+		},
+		{
+			q : 'Could I use Khy\'eras to run a D&D/Pathfinder/etc. campaign outside of the forum?',
+			a : 'Absolutely! In the distant future, Memoria would like to craft Pathfinder companion for Khy\'eras and its races, but this is not currently in the works.'
+		}		
 	],
 	'Character Content' : [
 		{
@@ -22,7 +30,7 @@
 		},
 		{
 			q : 'Okay, fine, but, this race/class can\'t do "xyz". Can I do "xyz"? My character has always done it.',
-			a : 'Again, it is strongly preferred that a person does not do this. Khy\'eras races and classes were written for this particular game and while aspects of Khy\'eras might seem familiar to other games, it is not the same. We strive to be mostly unique and give writers an opportunity to utilize our original content.<br /><br /><strong>Examples of do-nots:</strong><br /><br /><ul><li><a href="./lore-races-kerasoka">Kerasokas</a> or full-blooded <a href="./lore-races-dwarf">Dwarves</a> that can use magic.</li><li><a href="./lore-races-korcai">Korcai</a> that can walk in sunlight.</li><li><a href="./lore-classes-paladin">Paladins</a> that don\'t devote themselves to any deity.</li><li><a href="./lore-races-dragon">Dragons</a> that can change into <a href="./lore-races-human">Humans</a>.</li></ul>The above list could go on. When someone goes out on a limb to craft a character that doesn\'t fit the "limitations" of Khy\'eras, this is disrupting and confusing to fellow writers. In a perfect world, we might be able to transfer characters from game to game, but having reasons to rebuild and construct new personas is also good! Consider it a challenge and see what adventures might be brought forth with an authentic character.'
+			a : 'Again, it is strongly preferred that a person does not do this. Khy\'eras races and classes were written for this particular game and while aspects of Khy\'eras might seem familiar to other games, it is not the same. We strive to be mostly unique and give writers an opportunity to utilize our original content.<br /><br /><strong>Examples of do-nots:</strong><br /><br /><ul><li><a href="./lore-races-kerasoka">Kerasokas</a> or full-blooded <a href="./lore-races-dwarf">Dwarves</a> that can use magic.</li><li><a href="./lore-races-korcai">Korcai</a> that can walk in sunlight.</li><li><a href="./lore-classes-paladin">Paladins</a> that don\'t devote themselves to any deity.</li></ul>The above list could go on. When someone goes out on a limb to craft a character that doesn\'t fit the "limitations" of Khy\'eras, this is disrupting and confusing to fellow writers. In a perfect world, we might be able to transfer characters from game to game, but having reasons to rebuild and construct new personas is also good! Consider it a challenge and see what adventures might be brought forth with an authentic character.'
 		},
 		{
 			q : 'Well, can I still ask about "xyz"? Maybe I just missed something.',
