--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewlisting.scss
@@ -133,7 +133,7 @@
 .topiclist > li.row {
 	dl {
 		dt[style*='images/icons'] {
-			background-size: 16px auto;
+			background-size: auto 16px;
 			background-position: 10px 1px;
 			.list-inner {
 				a.unread .icon {
