--- a/khyeras/_dev/styles/khyeras_v1/template/partials/footer_links.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/footer_links.html
@@ -16,7 +16,13 @@
 			image : ROOT_PATH ~ 'images/content/misc/banner-rpgrating-333.png'
 		}
 	],
-	'Affiliates' : []
+	'Affiliates' : [
+		{
+			name : 'Thorns: Uprising',
+			url :  '//anaxasdiaries.com/',
+			image : ROOT_PATH ~ 'images/content/misc/banner-thorns-uprising.png'
+		}
+	]
 } %}
 
 {% if footer_links %}
