--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -158,6 +158,10 @@
 /* Attach Panel
 ============================================== */
 
+.attach-row-tpl {
+	display: none;
+}
+
 #attach-panel {
 	#attach-panel-multi {
 		margin: 0 0 20px 0;
