--- a/khyeras/styles/khyeras_v1/template/partials/nav_menu_quick_links.html
+++ b/khyeras/styles/khyeras_v1/template/partials/nav_menu_quick_links.html
@@ -10,6 +10,6 @@
 		{{ function.create_nav_li(U_SEARCH_ACTIVE_TOPICS, lang('SEARCH_ACTIVE_TOPICS')) }}
 {% endif %}
 {% if U_WATCH_FORUM_LINK %}
-	{{ function.create_nav_li(U_WATCH_FORUM_LINK, lang('WATCH_FORUM_TITLE')) }}
+	{{ function.create_nav_li(U_WATCH_FORUM_LINK, S_WATCH_FORUM_TITLE) }}
 {% endif %}
 {% EVENT navbar_header_quick_links_after %}
