--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1361,7 +1361,7 @@
 	}
 
 	// layout.scss
-	.atwho-container .atwho-view {
+	body .tribute-container {
 		left: 70px !important;
 		right: 70px !important;
 	}
@@ -1730,7 +1730,7 @@
 	.forabg, .forumbg, .post, .panel {
 		border-width: 10px;
 	}
-	.atwho-container .atwho-view {
+	body .tribute-container {
 		left: 60px !important;
 		right: 60px !important;
 	}
