--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
@@ -9,6 +9,7 @@ $icon-angle-down: \f107;
 $icon-angle-left: \f104;
 $icon-angle-right: \f105;
 $icon-angle-up: \f106;
+$icon-bell: \f0f3;
 $icon-clone: \f24d;
 $icon-cogs: \f085;
 $icon-comment: \f075;
