--- a/khyeras/styles/khyeras_v1/template/simple_header.html
+++ b/khyeras/styles/khyeras_v1/template/simple_header.html
@@ -26,7 +26,7 @@
 
 	<link href="{T_FONT_AWESOME_LINK}" rel="stylesheet">
 	<link href="{T_STYLESHEET_LINK}" rel="stylesheet">
-
+	<link href="{ROOT_PATH}styles/khyeras_v1/theme/speech.css?assets_version={T_ASSETS_VERSION}" rel="stylesheet">
 	<!-- IF S_CONTENT_DIRECTION eq 'rtl' -->
 		<link href="{T_THEME_PATH}/bidi.css?assets_version={T_ASSETS_VERSION}" rel="stylesheet">
 	<!-- ENDIF -->
