Add speech colors

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/speech.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/speech.scss
@@ -53,6 +53,9 @@
 	&[data-name='Loxiel'] {
 		color: #40ff80;
 	}
+	&[data-name='Malcolm Rhodes'] {
+		color: #80bfbf;
+	}
 	&[data-name='Mara Whitewood'] {
 		color: #eedd82;
 	}
@@ -65,11 +68,17 @@
 	&[data-name='Robert Jenn'] {
 		color: #ffdead;
 	}
+	&[data-name='Rory Lunatus'] {
+		color: #e77cef;
+	}
 	&[data-name='Sir Archibald'] {
 		color: #8080ff;
 	}
+	&[data-name='Sterling'] {
+		color: #e8e2c5;
+	}
 	&[data-name='Terrance Khadar'] {
-		color: #ff00ff;
+		color: #ff8c00;
 	}
 	&[data-name='The Cook'] {
 		color: #ff4040;
