--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/speech.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/speech.scss
@@ -5,11 +5,17 @@
 */
 
 .bbcode-character-speech {
+	&[data-name='Amalia Hahn'] {
+		color: #bf0040;
+	}
 	&[data-name='Artemis Black'] {
 		color: #9aa7b3;
 	}
 	&[data-name='Aurae'] {
 		color: #ff8080;
+	}
+	&[data-name='Borin Skyhammer'] {
+		color: #cf7d1f;
 	}
 	&[data-name='Charlotte'] {
 		color: #a65300;
@@ -29,6 +35,9 @@
 	&[data-name='Galynhun-Khan Tinnudir'] {
 		color: #778899;
 	}
+	&[data-name='Gavin Tate'] {
+		color: #a94c1d;
+	}
 	&[data-name='Harroc Crownegrove'] {
 		color: #40bf00;
 	}
@@ -37,6 +46,12 @@
 	}
 	&[data-name='Inya'] {
 		color: #bfbfbf;
+	}
+	&[data-name='Jacobus Sandova'] {
+		color: #bfff00;
+	}
+	&[data-name='Johnathan Lemound'] {
+		color: #80bfff;
 	}
 	&[data-name='Katarya Frost'] {
 		color: #4080ff;
@@ -52,6 +67,9 @@
 	}
 	&[data-name='Loxiel'] {
 		color: #40ff80;
+	}
+	&[data-name='Lynwood Mcneil'] {
+		color: #408040;
 	}
 	&[data-name='Malcolm Rhodes'] {
 		color: #80bfbf;
