Add code for new header bbcode

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_icons-fa.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_icons-fa.scss
@@ -20,6 +20,7 @@ $icon-eye: \f06e;
 $icon-facebook: \f09a;
 $icon-file-o: \f016;
 $icon-gplus: \f0d5;
+$icon-header: \f1dc;
 $icon-heart: \f004;
 $icon-inbox: \f01c;
 $icon-images: \f1c5;
